--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -153,16 +153,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [macos-12, macos-13]
+        os: [macos-12, macos-13, macos-14]
     runs-on: ${{ matrix.os }}
     needs: [upload-src]
     steps:
       - name: prep macos
         run: |
-          brew uninstall "openssl@1.1"
-          rm /usr/local/bin/openssl
-          rm -rf /usr/local/opt/openssl /usr/local/include/openssl
-          brew install --overwrite brotli cmake go googletest libusb lz4 \
+          rm -rf /opt/homebrew/include/openssl /usr/local/opt/openssl /usr/local/include/openssl
+          brew install --overwrite --quiet brotli cmake go googletest libusb lz4 \
           ninja pcre2 protobuf zstd
 
       - name: download source
@@ -175,15 +173,16 @@ jobs:
           tar -xf android-tools-*.tar.xz
           cd android-tools-*/
           mkdir build && cd build
-          cmake -DCMAKE_C_FLAGS="$CFLAGS" -DCMAKE_CXX_FLAGS="$CXXFLAGS" -DCMAKE_BUILD_TYPE=Release -GNinja ..
+          cmake -DCMAKE_C_FLAGS="$CFLAGS" -DCMAKE_CXX_FLAGS="$CXXFLAGS" -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_INSTALL_PREFIX=$HOME/android-tools -GNinja ..
           ninja --verbose
           echo -e "\n### make install ###\n"
-          cmake --install . --prefix /usr/local
+          cmake --install .
           echo -e "\n### all done ###\n"
 
       - name: check
         run: |
-          /usr/local/bin/adb --version
-          /usr/local/bin/fastboot --version
-          /usr/local/bin/make_f2fs -V
-          /usr/local/bin/sload_f2fs -V
+          $HOME/android-tools/bin/adb --version
+          $HOME/android-tools/bin/fastboot --version
+          $HOME/android-tools/bin/make_f2fs -V
+          $HOME/android-tools/bin/sload_f2fs -V
